# advent-of-code

./: .bazelignore  .bazelrc  .envrc  .gitignore  .pre-commit-config.yaml  AdventOfCode.cabal  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Dockerfile  FLAKE_STRUCTURE.md  LICENSE  MODULE.bazel  NIX_BUILD.md  README.md  flake.nix  justfile  package.json  pnpm-lock.yaml  replit.nix  results.yaml  show-flake-info.sh
src/AoC16/s16e01-csharp/: BUILD.bazel  Common.cs  Main.cs  Part1.cs  Part2.cs  Tests.cs  justfile
src/AoC16/s16e01-go/: BUILD.bazel  flake.nix  go.mod  justfile  main.go  s16e01
src/AoC16/s16e01-go/common/: common.go  common_test.go
src/AoC16/s16e01-haskell/: BUILD.bazel  Common.hs  Part2Main.hs  README.md  Tests.hs  aoc-solution.cabal  flake.nix  generated.nix  justfile
src/AoC16/s16e01-julia/: BUILD.bazel  flake.nix  justfile
src/AoC16/s16e01-julia/src/: lib.jl  main.jl  part1.jl  part2.jl
src/AoC16/s16e01-julia/test/: runtests.jl
src/AoC16/s16e01-kotlin-bazel/: BUILD.bazel  WORKSPACE  flake.nix  justfile
src/AoC21/: Helpers.hs  Main.hs  README.md  aoc21.cabal  flake.nix  generated.nix  justfile
src/AoC21/s21e01-haskell/: BUILD.bazel  Common.hs  Main.hs  Part1Main.hs  README.md  Tests.hs  flake.nix  generated.nix  justfile  s21e01-haskell.cabal
src/AoC22/: AoC22E01.hs  AoC22E02.hs  AoC22E03.hs  AoC22E04.hs  AoC22E05.hs  AoC22E06.hs  AoC22E07.hs  AoC22E08.hs  AoC22E09.hs  AoC22E10.hs  AoC22E11.hs  AoC22E12.hs  AoC22E13.hs  AoC22E14.hs  AoC22E15.hs  BUILD.bazel  Helpers.hs  Main.hs  Paths_aoc22.hs  README.md  aoc22.cabal  flake.nix  generated.nix  justfile
src/AoC23/: .gitignore  AoC23E01.ts  AoC23E02.ts  AoC23E03.ts  AoC23E04.ts  AoC23E05-lib.ts  AoC23E05-worker.js  AoC23E05.ts  AoC23E06.ts  AoC23E07.ts  AoC23E08.ts  AoC23E09.ts  AoC23E10.ts  AoC23E11.ts  AoC23E12.ts  AoC23E13.ts  AoC23E14.ts  AoC23E15.ts  AoC23E16.ts  AoC23E17.ts  AoC23E18.ts  AoC23E19.ts  AoC23E20.ts  BUILD.bazel  aoclib.ts  flake.nix  index.ts  justfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src/AoC23/day02/: common.ts  main.ts
src/AoC23/day03/: common.ts  main.ts  part1.ts
src/AoC23/day04/: common.ts  main.ts  part2.ts
src/AoC23/day05/: common.ts  lib.ts  main.ts
src/AoC23/lib/: utils.ts
src/AoC23/s23e01/: s23e01-lib.test.ts  s23e01-lib.ts  s23e01-part1.ts  s23e01-part2.ts
src/AoC23/s23e02/: s23e02-lib.test.ts  s23e02-lib.ts  s23e02-part1.ts  s23e02-part2.ts
src/AoC23/s23e03/: s23e03-lib.test.ts  s23e03-lib.ts  s23e03-part1.ts  s23e03-part2.ts
src/AoC23/s23e04/: s23e04-lib.test.ts  s23e04-lib.ts  s23e04-part1.ts  s23e04-part2.ts
src/AoC23/s23e05/: lib.ts  s23e05-lib.test.ts  s23e05-lib.ts  s23e05-part1.ts  s23e05-part2.ts  worker.js
src/AoC23/s23e06/: s23e06-lib.test.ts  s23e06-lib.ts  s23e06-part1.ts  s23e06-part2.ts
src/AoC23/s23e07/: s23e07-lib.test.ts  s23e07-lib.ts  s23e07-part1.ts  s23e07-part2.ts
src/AoC23/s23e08/: s23e08-lib.test.ts  s23e08-lib.ts  s23e08-part1.ts  s23e08-part2.ts
src/AoC23/s23e09/: s23e09-lib.test.ts  s23e09-lib.ts  s23e09-part1.ts  s23e09-part2.ts
src/AoC23/s23e10/: s23e10-lib.test.ts  s23e10-lib.ts  s23e10-part1.ts  s23e10-part2.ts
src/AoC23/s23e11/: s23e11-lib.test.ts  s23e11-lib.ts  s23e11-part1.ts  s23e11-part2.ts
src/AoC23/s23e12/: s23e12-lib.test.ts  s23e12-lib.ts  s23e12-part1.ts  s23e12-part2.ts
src/AoC23/s23e13/: s23e13-lib.test.ts  s23e13-lib.ts  s23e13-part1.ts  s23e13-part2.ts
src/AoC23/s23e14/: s23e14-lib.test.ts  s23e14-lib.ts  s23e14-part1.ts  s23e14-part2.ts
src/AoC23/s23e15/: s23e15-lib.test.ts  s23e15-lib.ts  s23e15-part1.ts  s23e15-part2.ts
src/AoC23/s23e16/: s23e16-lib.test.ts  s23e16-lib.ts  s23e16-part1.ts  s23e16-part2.ts
src/AoC23/s23e17/: s23e17-lib.test.ts  s23e17-lib.ts  s23e17-part1.ts  s23e17-part2.ts
src/AoC23/s23e18/: s23e18-lib.test.ts  s23e18-lib.ts  s23e18-part1.ts  s23e18-part2.ts
src/AoC23/s23e19/: s23e19-lib.test.ts  s23e19-lib.ts  s23e19-part1.ts  s23e19-part2.ts
src/aoc-cli/: BUILD.bazel  README.md  flake.nix  go.mod  main.go
src/aoc-cli/builder/: BUILD.bazel  builder.go
src/aoc-cli/config/: BUILD.bazel  config.go
src/aoc-cli/downloader/: BUILD.bazel  downloader.go
src/aoc-cli/runner/: BUILD.bazel  runner.go
templates/cpp/: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  flake.nix  justfile
templates/cpp/src/: BUILD.bazel  main.cpp  part2.cpp  solution.cpp  solution.h
templates/cpp/tests/: BUILD.bazel  test_solution.cpp
templates/csharp/: BUILD.bazel  Common.cs  Main.cs  Tests.cs
templates/haskell/: BUILD.bazel  Common.hs  MIGRATION.md  Tests.hs  aoc-solution.cabal  flake.nix  generated.nix  justfile
templates/julia/: BUILD.bazel  flake.nix  justfile
templates/julia/src/: lib.jl  main.jl
templates/julia/test/: runtests.jl
templates/kotlin/: BUILD.bazel  WORKSPACE  build.gradle.kts  build.nix  common.kt  flake.nix  justfile  part1.kt  part1.kts  part2.kt  run.sh  settings.gradle.kts  shell.nix
templates/kotlin-bazel/: BUILD.bazel  WORKSPACE  flake.nix
templates/nim/: BUILD.bazel  aoc_solution.nim  aoc_solution.nimble  common.nim  flake.nix  justfile  part1.nim  part2.nim  run.sh  shell.nix
templates/python/: BUILD.bazel  common.py  flake.nix  justfile  part1.py  part2.py  pyproject.toml  run.sh  shell.nix
templates/python/aoc_solution/: __init__.py  main.py  part1.py  part2.py
templates/python/template_python/: __init__.py  common.py  main.py  part1.py  part2.py
templates/python/tests/: __init__.py  test_solution.py
templates/rust/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  common.rs  flake.nix  justfile  part1.rs  run.sh  shell.nix
templates/rust/src/: lib.rs  main.rs
templates/swift/: BUILD.bazel  Common.swift  Main.swift  Part1.swift  Part2.swift  README.md  Tests.swift  justfile  test.sh
templates/typescript/: BUILD.bazel  common.ts  flake.nix  justfile  main.ts  package.json  part1.ts  part2.ts  pnpm-lock.yaml  tsconfig.json
templates/zig/: BUILD.bazel  common.zig  flake.nix  justfile  part1.zig  part2.zig  run.sh  shell.nix
tools/format/: BUILD.bazel  package.json  pnpm-lock.yaml
(+215 files in other folders)
