cabal-version:      2.4
name:               AdventOfCode
version:            21.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

data-dir: data
data-files: *.txt

executable AdventOfCode
    main-is:          Main.hs
    other-modules: Paths_AdventOfCode, AoC21E01
    autogen-modules: Paths_AdventOfCode

    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app, lib
    default-language: Haskell2010
