cabal-version:      2.4
name:               AdventOfCode
version:            22.9.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

data-dir: data
data-files: *.txt

executable AdventOfCode
    main-is:          Main.hs
    other-modules: 
      Paths_AdventOfCode, Helpers, 
      AoC21E01, AoC22E01, AoC22E02, AoC22E03, AoC22E04, AoC22E05, AoC22E06,
      AoC22E07, AoC22E08, AoC22E09
    autogen-modules: Paths_AdventOfCode

    build-depends:    base ^>= 4.14, containers ^>= 0.6.6, sort ^>= 1.0
    hs-source-dirs:   src, src/AoC21, src/AoC22
    default-language: Haskell2010
