"""Bazel module for Advent of Code monorepo."""

module(
    name = "advent-of-code",
    version = "0.1.0",
)

bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_kotlin", version = "2.2.0")
bazel_dep(name = "rules_rust", version = "0.67.0")
bazel_dep(name = "toolchains_llvm", version = "1.5.0")

# C++ toolchain
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "19.1.6",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# Rust toolchain setup
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.91.1"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Crate universe for Rust dependencies
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

# Rust template dependencies
crate.from_cargo(
    name = "crates_rust_template",
    cargo_lockfile = "//templates/rust:Cargo.lock",
    manifests = ["//templates/rust:Cargo.toml"],
)
use_repo(crate, "crates_rust_template")

# Go toolchain setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.4")

# Gazelle for Go dependency management
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//templates/go:go.mod")
use_repo(
    go_deps,
    # No external dependencies in template yet
)
