"""Bazel module for Advent of Code monorepo."""

module(
    name = "advent-of-code",
    version = "0.1.0",
)

bazel_dep(name = "aspect_rules_js", version = "2.8.2")
bazel_dep(name = "aspect_rules_ts", version = "3.7.1")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_kotlin", version = "2.2.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_rust", version = "0.67.0")
bazel_dep(name = "toolchains_llvm", version = "1.5.0")

# C++ toolchain
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "19.1.6",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# Rust toolchain setup
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.91.1"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Crate universe for Rust dependencies
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

# Rust template dependencies
crate.from_cargo(
    name = "crates_rust_template",
    cargo_lockfile = "//templates/rust:Cargo.lock",
    manifests = ["//templates/rust:Cargo.toml"],
)
use_repo(crate, "crates_rust_template")

# Go toolchain setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.4")

# Gazelle for Go dependency management
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//templates/go:go.mod")
use_repo(
    go_deps,
    # No external dependencies in template yet
)

# Python toolchain setup
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13.9",
)

# Python dependencies for template
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_python_template",
    python_version = "3.13",
    requirements_lock = "//templates/python:requirements.txt",
)
use_repo(pip, "pip_python_template")

# Node.js setup for TypeScript
node = use_extension("@aspect_rules_js//js:extensions.bzl", "node")
node.toolchain(node_version = "25.2.1")

# TypeScript toolchain
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# npm dependencies for TypeScript template
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm_typescript_template",
    pnpm_lock = "//templates/typescript:pnpm-lock.yaml",
)
use_repo(npm, "npm_typescript_template")
