"""Bazel module for Advent of Code monorepo.

This module defines all language toolchains and dependencies for the multi-language
Advent of Code solutions. Each language section is clearly separated for maintainability.
"""

module(
    name = "advent-of-code",
    version = "0.1.0",
)

###############################################################################
# Core Dependencies
###############################################################################

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "aspect_rules_lint", version = "1.2.1")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

###############################################################################
# C/C++ Toolchain
###############################################################################

bazel_dep(name = "rules_cc", version = "0.2.14")

###############################################################################
# Rust Toolchain and Dependencies
###############################################################################

bazel_dep(name = "rules_rust", version = "0.67.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.91.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Crate universe for Rust dependencies
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates_rust_template",
    cargo_lockfile = "//templates/rust:Cargo.lock",
    manifests = ["//templates/rust:Cargo.toml"],
)
use_repo(crate, "crates_rust_template")

###############################################################################
# Go Toolchain and Dependencies
###############################################################################

bazel_dep(name = "rules_go", version = "0.59.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.4")

# Go dependencies via Gazelle
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//src/aoc-cli:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_pflag",
    "in_gopkg_yaml_v3",
)

###############################################################################
# Python Toolchain and Dependencies
###############################################################################

bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13.9",
)

# Python dependencies for template
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_python_template",
    python_version = "3.13.9",
    requirements_lock = "//templates/python:requirements_lock.txt",
)
use_repo(pip, "pip_python_template")

###############################################################################
# TypeScript/Node.js Toolchain and Dependencies
###############################################################################

bazel_dep(name = "aspect_rules_js", version = "2.8.2")
bazel_dep(name = "aspect_rules_ts", version = "3.7.1")

# Node.js setup
node = use_extension("@aspect_rules_js//js:extensions.bzl", "node")
node.toolchain(node_version = "25.2.1")

# TypeScript toolchain
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# npm dependencies
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm_typescript_template",
    pnpm_lock = "//templates/typescript:pnpm-lock.yaml",
)
use_repo(npm, "npm_typescript_template")
npm.npm_translate_lock(
    name = "npm_aoc23",
    pnpm_lock = "//src/AoC23:pnpm-lock.yaml",
)
use_repo(npm, "npm_aoc23")
npm.npm_translate_lock(
    name = "npm_s16e01_typescript",
    pnpm_lock = "//src/AoC16/s16e01-typescript:pnpm-lock.yaml",
)
use_repo(npm, "npm_s16e01_typescript")
npm.npm_translate_lock(
    name = "npm_tools",
    pnpm_lock = "//tools:pnpm-lock.yaml",
)
use_repo(npm, "npm_tools")

###############################################################################
# Kotlin/JVM Toolchain and Dependencies
###############################################################################

bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_kotlin", version = "2.2.0")

http_jar(
    name = "ktfmt",
    integrity = "sha256-l/x/vRlNAan6RdgUfAVSQDAD1VusSridhNe7TV4/SN4=",
    url = "https://repo1.maven.org/maven2/com/facebook/ktfmt/0.46/ktfmt-0.46-jar-with-dependencies.jar",
)

###############################################################################
# Zig Toolchain
###############################################################################

bazel_dep(name = "rules_zig", version = "0.12.3")

zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.toolchain(zig_version = "0.15.2")
use_repo(zig, "zig_toolchains")

register_toolchains("@zig_toolchains//:all")

###############################################################################
# Julia Toolchain
###############################################################################

bazel_dep(name = "rules_julia", version = "0.1.0")

julia = use_extension("@rules_julia//julia:extensions.bzl", "julia")
julia.toolchain(
    name = "julia_toolchains",
    version = "1.11.2",
)
use_repo(julia, "julia_toolchains")

register_toolchains("@julia_toolchains//:all")

###############################################################################
# .NET/C# Toolchain
###############################################################################

bazel_dep(name = "rules_dotnet", version = "0.20.5")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.200")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

###############################################################################
# Swift/Apple Toolchain
###############################################################################

bazel_dep(name = "apple_support", version = "1.24.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift", version = "3.1.2")

apple_cc_configure = use_extension("@build_bazel_apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc", "local_config_apple_cc_toolchains")

register_toolchains("@local_config_apple_cc_toolchains//:all")

http_archive(
    name = "swiftformat_mac",
    build_file_content = "filegroup(name = \"swiftformat_mac\", srcs=[\"swiftformat\"], visibility=[\"//visibility:public\"])",
    patch_cmds = [
        # On MacOS, `xattr -c` clears the "Unknown developer" warning when executing a fetched binary
        "if command -v xattr > /dev/null; then xattr -c swiftformat; fi",
        "chmod u+x swiftformat",
    ],
    sha256 = "978eaffdc3716bbc0859aecee0d83875cf3ab8d8725779448f0035309d9ad9f3",
    url = "https://github.com/nicklockwood/SwiftFormat/releases/download/0.49.17/swiftformat.zip",
)

###############################################################################
# Nim Toolchain
###############################################################################

bazel_dep(name = "rules_nim")
git_override(
    module_name = "rules_nim",
    commit = "ce93254e89c0f224dfa5245f732509dfe944f5d1",
    remote = "https://github.com/kczulko/rules_nim",
)

nim = use_extension("@rules_nim//nim:extensions.bzl", "nim")
nim.toolchain(nim_version = "2.2.6")
use_repo(nim, "nim_toolchains")

register_toolchains("@nim_toolchains//:all")
