cabal-version:      2.4
name:               aoc21
version:            21.1.0.0
synopsis:           Advent of Code 2021 Solutions
build-type:         Simple

executable aoc21
    main-is:          Main.hs
    other-modules:
      Helpers,
      AoC21E01
    build-depends:    base ^>= 4.14
    hs-source-dirs:   .
    default-language: Haskell2010
    extensions:       BangPatterns
    ghc-options:      -Wall -O2
