cabal-version:      2.4
name:               aoc21
version:            21.1.0.0
synopsis:           Advent of Code 2021 Solutions
build-type:         Simple

data-dir: data
data-files: *.txt

executable aoc21
    main-is:          Main.hs
    other-modules:
      Paths_aoc21,
      Helpers,
      AoC21E01
    autogen-modules:  Paths_aoc21
    build-depends:    base >= 4.14 && < 5
    hs-source-dirs:   .
    default-language: Haskell2010
    default-extensions: BangPatterns
    ghc-options:      -Wall -O2
