"""Build targets for Advent of Code 2022 Haskell solutions."""

# Main executable that runs all 15 days
genrule(
    name = "aoc22",
    srcs = glob([
        "*.hs",
        "data/*.txt",
    ]),
    outs = ["aoc22_exe"],
    cmd = """
        cd $$(dirname $(location Main.hs))
        ghc -O2 \\
            -outputdir $$OLDPWD/$(@D) \\
            -o $$OLDPWD/$@ \\
            Main.hs
    """,
    executable = True,
)
