"""Build targets for Advent of Code 2022 Haskell solutions."""

load("//build:haskell.bzl", "haskell_binary")

# Main executable that runs all 15 days
haskell_binary(
    name = "aoc22",
    main = "Main.hs",
    deps = glob(
        [
            "*.hs",
            "data/*.txt",
        ],
        exclude = ["Main.hs"],
    ),
)
