cabal-version:      2.4
name:               aoc22
version:            22.15.0.0
synopsis:           Advent of Code 2022 Solutions
build-type:         Simple

data-dir: data
data-files: *.txt

executable aoc22
    main-is:          Main.hs
    other-modules:
      Paths_aoc22,
      Helpers,
      AoC22E01, AoC22E02, AoC22E03, AoC22E04, AoC22E05, AoC22E06,
      AoC22E07, AoC22E08, AoC22E09, AoC22E10, AoC22E11, AoC22E12,
      AoC22E13, AoC22E14, AoC22E15
    autogen-modules:  Paths_aoc22
    build-depends:    base ^>= 4.14
    hs-source-dirs:   .
    default-language: Haskell2010
    extensions:       BangPatterns
    ghc-options:      -Wall -O2
