"""Bazel module for Advent of Code C++ template."""

module(
    name = "template-cpp",
    version = "1.0.0",
)

# C++ rules
bazel_dep(name = "rules_cc", version = "0.0.17")

# Hermetic LLVM/Clang toolchain
bazel_dep(name = "toolchains_llvm", version = "1.2.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "18.1.8",
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
