"""Build targets for Advent of Code Haskell solution."""

# Part 1 binary - outputs only part 1 result
genrule(
    name = "part1",
    srcs = [
        "Part1.hs",
        "Common.hs",
    ],
    outs = ["part1_exe"],
    cmd = "ghc -O2 -outputdir $(@D) -o $@ $(location Part1.hs)",
    executable = True,
)

# Part 2 binary - outputs only part 2 result
genrule(
    name = "part2",
    srcs = [
        "Part2.hs",
        "Common.hs",
    ],
    outs = ["part2_exe"],
    cmd = "ghc -O2 -outputdir $(@D) -o $@ $(location Part2.hs)",
    executable = True,
)

# Unit tests
genrule(
    name = "aoc_tests",
    srcs = [
        "Tests.hs",
        "Common.hs",
    ],
    outs = ["tests_exe"],
    cmd = "ghc -O2 -outputdir $(@D) -o $@ $(location Tests.hs)",
    executable = True,
)
