"""Build targets for Advent of Code Haskell solution."""

# Part 1 binary - outputs only part 1 result
genrule(
    name = "part1",
    srcs = [
        "Part1.hs",
        "Common.hs",
    ],
    outs = ["part1_exe"],
    cmd = "cd $$(dirname $(location Part1.hs)) && ghc -O2 -outputdir $$OLDPWD/$(@D) -o $$OLDPWD/$@ Part1.hs",
    executable = True,
)

# Part 2 binary - outputs only part 2 result
genrule(
    name = "part2",
    srcs = [
        "Part2.hs",
        "Common.hs",
    ],
    outs = ["part2_exe"],
    cmd = "cd $$(dirname $(location Part2.hs)) && ghc -O2 -outputdir $$OLDPWD/$(@D) -o $$OLDPWD/$@ Part2.hs",
    executable = True,
)

# Unit tests
genrule(
    name = "aoc_tests_bin",
    srcs = [
        "Tests.hs",
        "Common.hs",
    ],
    outs = ["tests_exe"],
    cmd = "cd $$(dirname $(location Tests.hs)) && ghc -O2 -outputdir $$OLDPWD/$(@D) -o $$OLDPWD/$@ Tests.hs",
    executable = True,
)

sh_test(
    name = "aoc_tests",
    srcs = [":aoc_tests_bin"],
)
