load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

# Common library with shared utilities
kt_jvm_library(
    name = "common",
    srcs = ["src/main/kotlin/common.kt"],
)

# Main verification binary
kt_jvm_binary(
    name = "main",
    srcs = ["src/main/kotlin/main.kt"],
    main_class = "MainKt",
    deps = [":common"],
)

# Part 1 executable
kt_jvm_binary(
    name = "part1",
    srcs = ["src/main/kotlin/part1.kt"],
    main_class = "Part1Kt",
    deps = [":common"],
)

# Part 2 executable
kt_jvm_binary(
    name = "part2",
    srcs = ["src/main/kotlin/part2.kt"],
    main_class = "Part2Kt",
    deps = [":common"],
)

# Unit tests
kt_jvm_test(
    name = "test",
    srcs = ["src/test/kotlin/CommonTest.kt"],
    test_class = "CommonTest",
    deps = [":common"],
)
