load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

kt_jvm_binary(
    name = "part1",
    srcs = [
        "part1.kt",
        "common.kt",
    ],
    main_class = "Part1Kt",
)

kt_jvm_binary(
    name = "part2",
    srcs = [
        "part2.kt",
        "common.kt",
    ],
    main_class = "Part2Kt",
)
