"""Build targets for Advent of Code Kotlin solution."""

load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

# Common library with solve functions
kt_jvm_library(
    name = "common",
    srcs = ["src/main/kotlin/Common.kt"],
)

# Main verification binary - runs both parts and validates results
kt_jvm_binary(
    name = "main",
    srcs = ["src/main/kotlin/Main.kt"],
    main_class = "MainKt",
    deps = [":common"],
)

# Part 1 binary
kt_jvm_binary(
    name = "part1",
    srcs = ["src/main/kotlin/Part1.kt"],
    main_class = "Part1Kt",
    deps = [":common"],
)

# Part 2 binary
kt_jvm_binary(
    name = "part2",
    srcs = ["src/main/kotlin/Part2.kt"],
    main_class = "Part2Kt",
    deps = [":common"],
)

# Tests
kt_jvm_test(
    name = "common_test",
    srcs = ["src/test/kotlin/CommonTest.kt"],
    main_class = "CommonTestKt",
    test_class = "CommonTestKt",
    deps = [":common"],
)
