[project]
name = "aoc-solution"
version = "0.1.0"
description = "Advent of Code solution in Python"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
aoc-solution = "aoc_solution.main:main"
part1 = "aoc_solution.part1:main"
part2 = "aoc_solution.part2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
