[project]
name = "template_python"
version = "0.1.0"
description = "Advent of Code solution in Python"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
template-python = "template_python.main:main"
template-python-part1 = "template_python.part1:main"
template-python-part2 = "template_python.part2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
